W03 Update credit card and prepare for render
